--- a/chart.html
+++ b/chart.html
@@ -58,6 +58,28 @@
             title: {
                 display: true,
                 text: 'The Title'
+            },
+            legend: {
+                display: true,
+                labels: {
+                    fontColor: 'rgb(200, 200, 200)',
+                    fontSize: 20,
+                    generateLabels: function(chart) {
+                        var data = chart.data;
+                        if (data.labels.length && data.datasets.length) {
+                            return data.labels.map(function(label, i) {
+                                var meta = chart.getDatasetMeta(0);
+                                var style = meta.controller.getStyle(i);
+                                return {
+                                    text: label,
+                                    fillStyle: style.backgroundColor,
+                                    strokeStyle: style.borderColor,
+                                    lineWidth: 1,
+                                };
+                            });
+                        }
+                    }
+                }
             }
         };
 
