--- a/chart.html
+++ b/chart.html
@@ -11,6 +11,7 @@
         <canvas id="radar_chart" width="40" height="40"></canvas>
     </div>
 
+    <!-- using local copy of Chart.js https://www.chartjs.org -->
     <script src="Chart.js"></script>
 
     <script type="text/javascript">
