--- a/electron-app/src/index.html
+++ b/electron-app/src/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>code</title>
 
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    <h1>code with ☕️</h1>
+    <p>programmed with AI assistant cursor.so</p>
   </body>
 </html>
